handling public/static files like css, js, images

--- a/01-nodejs/02-core-module/website/pages/404.html
+++ b/01-nodejs/02-core-module/website/pages/404.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website - Home</title>
+    <title>Not Found</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <h1>This is Homepage</h1>
-    <p>Welcome to our website</p>
-    <button onclick="printHello()">Print greeting in your console log</button>
+    <h1>404</h1>
+    <h2>File Not Found</h2>
+    <a href="/"><button>Return to homepage</button></a>
 </body>
 
 </html>
