finish adding bmi calculator functionality

--- a/02-express-js/pages/404.html
+++ b/02-express-js/pages/404.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your BMI Result</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <!-- initialize placeholder by [(DATA)] -->
-    <h1>[(BMI-RESULT)]kg/m2</h1>
-    <p>Normal BMI</p>
+    <h1>404</h1>
+    <h2>Page Not Found</h2>
 </body>
 
 </html>
