--- a/02-express-js/pages/index.html
+++ b/02-express-js/pages/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website - Home</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
 </head>
 
 <body>
     <h1>Hello World!</h1>
     <h3>This is my first express server, yahoo!</h3>
+
+    <hr />
+
     <a href="/bmi-form">Go to BMI Calculator</a>
+
+    <hr />
+
+    <img src="screenshot.png" alt="a screenshot of my vscode window" style="max-width: 100%; height: auto;">
 </body>
 
 </html>
