refactor code to preferred ways of dealing with POST method data

--- a/02-express-js/pages/bmi-form.html
+++ b/02-express-js/pages/bmi-form.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form method="POST" action="/calculate">
+    <form method="POST" action="/bmi-result">
         <input type="number" name="height" id="height" placeholder="insert your height in meter" step="0.01">
         <input type="number" name="weight" id="weight" placeholder="insert your weight in kg" step="0.01">
 
