add dashboard which list all shorten url and it's original url and the number of visitor count

--- a/03-using-ESM/bitly/pages/dashboard.html
+++ b/03-using-ESM/bitly/pages/dashboard.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitly Clone</title>
+    <title>Bitly Clone - Dashboard</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
 </head>
 
 <body>
-    <h1>Dashboard</h1>
+    <h1>Dashboard <a href="/">(Back to Home)</a></h1>
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">SHORTEN LINK</th>
+                <th scope="col">ORIGINAL LINK</th>
+                <th scope="col">VISITOR COUNTER</th>
+            </tr>
+        </thead>
+        <tbody>
+            [(LINK-LIST)]
+        </tbody>
+    </table>
 </body>
 
 </html>
