--- a/03-using-ESM/bitly/pages/index.html
+++ b/03-using-ESM/bitly/pages/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitly Clone</title>
+    <title>Bitly Clone - Home</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
 </head>
 
 <body>
-    <h1>Create shortlink URL</h1>
+    <h1>Create shortlink URL <a href="/dashboard">(Go to Dashboard)</a></h1>
     <form action="/shorten" method="post">
         <input type="text" name="url" id="url" placeholder="Enter your URL" required>
         <button type="submit">Shorten</button>
