--- a/03-using-ESM/bitly/pages/404.html
+++ b/03-using-ESM/bitly/pages/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitly Clone - File Not Found</title>
+    <title>Bitly Clone - Not Found</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
