--- a/03-using-ESM/bitly/pages/shorten.html
+++ b/03-using-ESM/bitly/pages/shorten.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitly Clone</title>
+    <title>Bitly Clone - Your URL</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
 </head>
